# tsl1

./: .replit  app.py  label_encoder.pkl  model_trainer.py  pyproject.toml  requirements.txt  tamil_labels.py  tsl_model.pkl  utils.py
