[project]
name = "app.py"
version = "0.1.0"
description = "Tamil Sign Language Recognition"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "numpy",
    "pillow",
    "scikit-learn",
    "opencv-python-headless",
    "matplotlib",
    "seaborn"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
